--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 *,
@@ -12,6 +13,11 @@ html,
 body {
   height: 100%;
   position: relative;
+  min-width: 320px;
+  overflow-x: hidden;
+  color: #ffffff;
+  scroll-behavior: smooth;
+
 }
 
 ul,
@@ -26,6 +32,7 @@ h5,
 h6 {
   margin: 0;
   padding: 0;
+  font-size: inherit;
 }
 
 a {
@@ -35,4 +42,34 @@ a {
 button:focus,
 input:focus {
   outline: transparent;
+}
+
+.container {
+max-width: 1270px;
+margin: 0 auto;
+padding: 0 15px;
+
+}
+
+.page-section {
+  height: 100vh;
+  background-image: url(../images/main-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: top center;
+  background-size: cover;
+  position: relative;
+  padding: 74px 0 50px;
+}
+
+.title {
+
+}
+
+.scroll__btn {
+padding: 13px 0 30px;
+text-align: center;
+position: absolute;
+right: 0;
+left: 0;
+bottom: 0;
 }
