--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -17,7 +17,6 @@ body {
   overflow-x: hidden;
   color: #ffffff;
   scroll-behavior: smooth;
-
 }
 
 ul,
@@ -33,10 +32,13 @@ h6 {
   margin: 0;
   padding: 0;
   font-size: inherit;
+  text-decoration: none;
+  list-style: none;
 }
 
 a {
   text-decoration: none;
+  color: #ffffff;
 }
 
 button:focus,
@@ -44,11 +46,18 @@ input:focus {
   outline: transparent;
 }
 
-.container {
-max-width: 1270px;
-margin: 0 auto;
-padding: 0 15px;
+body {
+  @include ulight;
+  font-size: 17px;
+  line-height: 26px;
+  height: 100%;
+  color: #ffffff;
+}
 
+.container {
+  max-width: 1270px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 .page-section {
@@ -62,14 +71,18 @@ padding: 0 15px;
 }
 
 .title {
-
+  @include reg;
+  font-size: 44px;
+  line-height: 53px;
+  padding-left: 25px;
+  margin-bottom: 55px;
 }
 
 .scroll__btn {
-padding: 13px 0 30px;
-text-align: center;
-position: absolute;
-right: 0;
-left: 0;
-bottom: 0;
+  padding: 13px 0 30px;
+  text-align: center;
+  position: absolute;
+  right: 0;
+  left: 0;
+  bottom: 0;
 }
