--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,6 +1,6 @@
-@import 'vars';
-@import 'fonts';
-@import 'global';
+@import "vars";
+@import "fonts";
+@import "global";
 
 //-----------------------------------------------------------------------------------------------------------
 //
@@ -8,7 +8,115 @@
 //
 //-----------------------------------------------------------------------------------------------------------
 
+.header {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 30px;
+    z-index: 10;
 
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        min-height: 30px;
+        align-items: center;
+        text-transform: uppercase;
+        font-size: 15px;
+        line-height: 17px;
+        @include umedi;
+    }
+
+    &__btn {
+        color: #ffffff;
+        background-color: transparent;
+        padding: 6px 28px;
+        border: 1px solid #ffffff;
+        border-radius: 3px;
+        margin-right: 8px;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.5s;
+
+        &:hover {
+            border: 1px solid #ffffff;
+            background-color: #fff;
+            color: #000000;
+        }
+    }
+
+    &__phone {
+        font-size: 16px;
+        line-height: 18px;
+        @include ubold;
+    }
+}
+
+.menu {
+    &__list-item {
+        display: inline-block;
+
+        & + .menu__list-item {
+            padding-left: 20px;
+        }
+    }
+}
+
+.top {
+    background-image: url(../images/header-bg.jpg);
+    display: flex;
+    align-items: flex-end;
+
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: radial-gradient(
+            45.97% 54.43% at 50% 45.57%,
+            rgba(23, 26, 28, 0) 50.28%,
+            rgba(23, 26, 28, 0.00225974) 50.29%,
+            rgba(4, 5, 5, 0.820343) 58.72%,
+            rgba(5, 5, 6, 0.792703) 80.08%,
+            #000000 87.89%
+        );
+        opacity: 0.4;
+    }
+
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+
+    &__title {
+        font-size: 96px;
+        line-height: 115px;
+        @include semi;
+        margin-bottom: 25px;
+    }
+
+    &__text {
+        margin: 25px 0 35px;
+        max-width: 325px;
+    }
+
+    &__social-item {
+        display: inline-block;
+        margin: 0 25px;
+    }
+
+    &__social-link {
+        opacity: 0.5;
+        transition: all 0.5s;
+
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
 
 //-----------------------------------------------------------------------------------------------------------
 //
@@ -16,4 +124,4 @@
 //
 //-----------------------------------------------------------------------------------------------------------
 
-@import 'media';
+@import "media";
