--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -61,13 +61,29 @@ body {
 }
 
 .page-section {
-  height: 100vh;
   background-image: url(../images/main-bg.jpg);
   background-repeat: no-repeat;
   background-position: top center;
   background-size: cover;
   position: relative;
-  padding: 74px 0 50px;
+
+  &::before {
+    content: "";
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    position: absolute;
+    background: linear-gradient(119.35deg, rgba(23, 26, 28, 0.72) 0%, #5e5e57 100%);
+    opacity: 0.15;
+  }
+
+  &__wrapper {
+    z-index: 1;
+    position: relative;
+    min-height: 100vh;
+    padding: 74px 0 50px;
+  }
 }
 
 .title {
@@ -76,6 +92,7 @@ body {
   line-height: 53px;
   padding-left: 25px;
   margin-bottom: 55px;
+  padding-top: 200px;
 }
 
 .scroll__btn {
