--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -63,8 +63,6 @@
 
 .top {
     background-image: url(../images/header-bg.jpg);
-    display: flex;
-    align-items: flex-end;
 
     &::before {
         content: "";
@@ -91,6 +89,11 @@
         align-items: center;
     }
 
+    &__wrapper {
+        display: flex;
+        align-items: flex-end;
+    }
+
     &__title {
         font-size: 96px;
         line-height: 115px;
@@ -115,6 +118,43 @@
         &:hover {
             opacity: 1;
         }
+    }
+}
+
+.products {
+    &__inner {
+        display: flex;
+        justify-content: space-between;
+        padding-left: 50px;
+    }
+
+    &__text {
+        max-width: 440px;
+
+        p {
+            margin-bottom: 30px;
+        }
+    }
+
+    &__slider {
+        max-width: 560px;
+    }
+
+    &__slider-box {
+        position: relative;
+        padding-top: 110px;
+    }
+
+    &__slider-text {
+        width: 285px;
+        position: absolute;
+        text-align: right;
+        font-size: 24px;
+        line-height: 28px;
+        @include umedi;
+        bottom: 30px;
+        left: -250px;
+        z-index: 5;
     }
 }
 
