--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -138,6 +138,16 @@
 
     &__slider {
         max-width: 560px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 560px;
+            height: 276px;
+            border: 4px solid #ffffff;
+            top: -15px;
+            right: -17px;
+        }
     }
 
     &__slider-box {
@@ -158,6 +168,141 @@
     }
 }
 
+.slider-btn {
+    // padding: 16px 26px;
+    border: none;
+    background-color: #fff;
+    outline: transparent;
+    position: absolute;
+    right: 0;
+    cursor: pointer;
+    z-index: 5;
+    bottom: -45px;
+
+    svg {
+        stroke: #000000;
+        // object-fit: cover;
+        // background-size: cover;
+    }
+
+    &__left {
+        padding: 16px 31px;
+        right: 72px;
+    }
+
+    &.slick-disabled {
+        background-color: #000000;
+
+        svg {
+            stroke: #ffffff;
+        }
+    }
+}
+
+.benefits {
+    &__items {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 25px;
+    }
+
+    &__item {
+        margin-bottom: 100px;
+        display: flex;
+        align-items: flex-end;
+        // position: relative;
+
+        &:nth-child(even) {
+            margin-left: 40px;
+            transform: translateY(25px);
+            // top: 20px;
+            // margin-top: 100px;
+        }
+    }
+
+    &__item-1,
+    &__item-3 {
+        position: relative;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            background-repeat: no-repeat;
+            // background-size: cover;
+            // object-fit: cover;
+            background-position: 0 0;
+        }
+    }
+
+    &__item-1 {
+        &::before {
+            height: 50px;
+            width: 245px;
+            background-image: url(../images/line.svg);
+            right: -56px;
+            top: 31px;
+        }
+    }
+
+    &__item-3 {
+        &::before {
+            background-image: url(../images/line2.svg);
+            width: 255px;
+            height: 40px;
+            right: -55px;
+            top: 50px;
+        }
+
+        &::after {
+            background-image: url(../images/line1.svg);
+            width: 465px;
+            height: 65px;
+            top: -70px;
+            right: -54px;
+        }
+    }
+
+    &__num {
+        line-height: 41px;
+        font-size: 36px;
+        @include ubold;
+        margin-right: 10px;
+    }
+
+    &__img {
+        position: relative;
+        margin-right: 32px;
+
+        &::before {
+            content: "";
+            position: absolute;
+            width: 193px;
+            height: 128px;
+            border: 2px solid #ffffff;
+            right: -12px;
+            top: -12px;
+            z-index: -1;
+        }
+    }
+
+    &__info {
+        width: 300px;
+    }
+
+    &__info-title {
+        width: 123px;
+        font-size: 21px;
+        line-height: 24px;
+        @include ubold;
+        margin-bottom: 10px;
+    }
+
+    &__info-text {
+        font-size: 15px;
+        line-height: 18px;
+    }
+}
 //-----------------------------------------------------------------------------------------------------------
 //
 //                                                    END CODE
